.deploy/postgres/manual/04-statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: ngxdb-postgresql
  labels:
    app: postgresql
spec:
  serviceName: ngxdb-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      role: master
  template:
    metadata:
      name: ngxdb-postgresql
      labels:
        app: postgresql
        role: master
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: ngxdb-postgresql
          image: docker.io/bitnami/postgresql:10.7.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
          ports:
            - name: postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready -U "postgres" -h localhost
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready -U "postgres" -h localhost
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: custom-init-scripts-secret
              mountPath: /docker-entrypoint-initdb.d/secret
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: custom-init-scripts-secret
          secret:
            secretName: postgres-init-scripts
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - 'ReadWriteOnce'
        resources:
          requests:
            storage: '8Gi'
