.deploy/postgres/manual/05-postgres-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 35432
  selector:
    app: postgres
