.deploy/postgres/manual/05-svc-headless.yaml
---
# Source: postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngxdb-postgresql-headless
  labels:
    app: postgresql
    chart: postgresql-3.11.7
    release: 'ngxdb'
    heritage: 'Tiller'
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
  selector:
    app: postgresql
    release: 'ngxdb'
