.deploy/postgres/manual/05-svc.yaml
---
# Source: postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngxdb-postgresql
  labels:
    app: postgresql
    chart: postgresql-3.11.7
    release: 'ngxdb'
    heritage: 'Tiller'
spec:
  type: NodePort
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      nodePort: 31432
  selector:
    app: postgresql
    release: 'ngxdb'
    role: master
